modules/gdscript/tests/scripts/parser/errors/reserved_keyword_trait.gd
extends Node

func ready():
    trait example
